verseghy-website/backend2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
        - name: app
          image: ghcr.io/verseghy/website_backend2
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /liveness
              port: 3000
            initialDelaySeconds: 300
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /readiness
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              memory: 128Mi
