verseghy-website/backend2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend2
spec:
  selector:
    app: backend2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
